--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
 <h3>Score: <span id="result"></span></h3>
-    
+
+<div class="grid">
+</div>
+
     <script src="app.js"></script>
 </body>
 </html>
